updated code, interface, and added survey section

--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
             <li class="nav-item"><a href="./home.html" class="nav-link">Home</a></li>
             <li class="nav-item"><a href="./index.html" class="nav-link">Calculator</a></li>
             <li class="nav-item"><a href="./about.html" class="nav-link active" aria-current="page">About</a></li>
+            <li class="nav-item"><a href="./survey.html" class="nav-link">Survey</a></li>
           </ul>
         </header>
       </div>
@@ -25,10 +26,10 @@
             <div class="feature-icon bg-primary bg-gradient">
               <svg class="bi" width="1em" height="1em"><use xlink:href="#collection"></use></svg>
             </div>
-            <h2>Featured title</h2>
-            <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
-            <a href="#" class="icon-link">
-              Call to action
+            <h2>Contact the developer</h2>
+            <p>Below you will find the link to contact the developer of this website. You can also contact by messaging: 949-350-8825</p>
+            <a href="#" target="_blank" class="icon-link">
+              Go to Instagram
               <svg class="bi" width="1em" height="1em"><use xlink:href="#chevron-right"></use></svg>
             </a>
           </div>
@@ -36,10 +37,10 @@
             <div class="feature-icon bg-primary bg-gradient">
               <svg class="bi" width="1em" height="1em"><use xlink:href="#people-circle"></use></svg>
             </div>
-            <h2>Featured title</h2>
-            <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
-            <a href="#" class="icon-link">
-              Call to action
+            <h2>Github</h2>
+            <p>Below you will find the link to the github page for the code used to make this Website</p>
+            <a href="https://github.com/CPSiphon/CollegeCalculator.github.io" target="_blank" class="icon-link">
+              Go to Github
               <svg class="bi" width="1em" height="1em"><use xlink:href="#chevron-right"></use></svg>
             </a>
           </div>
@@ -47,10 +48,10 @@
             <div class="feature-icon bg-primary bg-gradient">
               <svg class="bi" width="1em" height="1em"><use xlink:href="#toggles2"></use></svg>
             </div>
-            <h2>Featured title</h2>
-            <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
-            <a href="#" class="icon-link">
-              Call to action
+            <h2>About the developer</h2>
+            <p>Ryan Kim is currently a sophmore at Aliso Niguel High School. He uses his free time to code, hangout with friends, and game while maintaing a high GPA in advanced classes. Learn more below</p>
+            <a href="#" target="_blank" class="icon-link">
+              About Ryan Kim
               <svg class="bi" width="1em" height="1em"><use xlink:href="#chevron-right"></use></svg>
             </a>
           </div>
