--- a/index.html
+++ b/index.html
@@ -19,8 +19,12 @@
             <li class="nav-item"><a href="./home.html" class="nav-link" >Home</a></li>
             <li class="nav-item"><a href="./index.html" class="nav-link active" aria-current="page">Calculator</a></li>
             <li class="nav-item"><a href="./about.html" class="nav-link">About</a></li>
+            <li class="nav-item"><a href="./survey.html" class="nav-link">Survey</a></li>
           </ul>
         </header>
+      </div>
+      <div>
+          
       </div>
     <div class="container full-height">
         <div class="row full-height">
@@ -29,7 +33,7 @@
                     <div class="col">
                             <label for="SAT">SAT</label>
                         <input type="range" name="SAT" id="SAT" onchange="updateSATvalue(this)">
-                        <div id="SATvalue"></div>
+                        <div id="SATvalue">1350</div>
                     </div>
                     
                 </div>
