--- a/home.html
+++ b/home.html
@@ -15,13 +15,18 @@
             <li class="nav-item"><a href="./home.html" class="nav-link active" aria-current="page">Home</a></li>
             <li class="nav-item"><a href="./index.html" class="nav-link">Calculator</a></li>
             <li class="nav-item"><a href="./about.html" class="nav-link">About</a></li>
+            <li class="nav-item"><a href="./survey.html" class="nav-link">Survey</a></li>
+
           </ul>
         </header>
       </div>
       <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
         <div class="col-md-5 p-lg-5 mx-auto my-5">
           <h1 class="display-4 fw-normal">College Admission Calculator</h1>
-          <p class="lead fw-normal">And an even wittier subheading to boot. Jumpstart your marketing efforts with this example based on Apple’s marketing pages.</p>
+          <p class="lead fw-normal">A calculator that shows you a basic idea of your chances of being admitted into a College.
+            *Disclaimer the results will not determine if you <strong>will</strong> or <strong>will not</strong> get into the College.
+             
+          </p>
           <a class="btn btn-outline-secondary" href="./index.html">Go to Calculator</a>
         </div>
         <div class="product-device shadow-sm d-none d-md-block"></div>
