--- a/about.html
+++ b/about.html
@@ -1,61 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>Document</title>
+  <link rel="shortcut icon" type="image/png" href="img/favicon.png.png">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
+  <title>Aboutpage</title>
 </head>
+
 <body>
-    <div class="container">
-        <header class="d-flex justify-content-center py-3">
-          <ul class="nav nav-pills">
-            <li class="nav-item"><a href="./home.html" class="nav-link">Home</a></li>
-            <li class="nav-item"><a href="./index.html" class="nav-link">Calculator</a></li>
-            <li class="nav-item"><a href="./about.html" class="nav-link active" aria-current="page">About</a></li>
-            <li class="nav-item"><a href="./survey.html" class="nav-link">Survey</a></li>
-          </ul>
-        </header>
-      </div>
-      <div class="container px-4 py-5" id="featured-3">
-        <h2 class="pb-2 border-bottom">Columns with icons</h2>
-        <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
-          <div class="feature col">
-            <div class="feature-icon bg-primary bg-gradient">
-              <svg class="bi" width="1em" height="1em"><use xlink:href="#collection"></use></svg>
-            </div>
-            <h2>Contact the developer</h2>
-            <p>Below you will find the link to contact the developer of this website. You can also contact by messaging: 949-350-8825</p>
-            <a href="#" target="_blank" class="icon-link">
-              Go to Instagram
-              <svg class="bi" width="1em" height="1em"><use xlink:href="#chevron-right"></use></svg>
-            </a>
-          </div>
-          <div class="feature col">
-            <div class="feature-icon bg-primary bg-gradient">
-              <svg class="bi" width="1em" height="1em"><use xlink:href="#people-circle"></use></svg>
-            </div>
-            <h2>Github</h2>
-            <p>Below you will find the link to the github page for the code used to make this Website</p>
-            <a href="https://github.com/CPSiphon/CollegeCalculator.github.io" target="_blank" class="icon-link">
-              Go to Github
-              <svg class="bi" width="1em" height="1em"><use xlink:href="#chevron-right"></use></svg>
-            </a>
-          </div>
-          <div class="feature col">
-            <div class="feature-icon bg-primary bg-gradient">
-              <svg class="bi" width="1em" height="1em"><use xlink:href="#toggles2"></use></svg>
-            </div>
-            <h2>About the developer</h2>
-            <p>Ryan Kim is currently a sophmore at Aliso Niguel High School. He uses his free time to code, hangout with friends, and game while maintaing a high GPA in advanced classes. Learn more below</p>
-            <a href="#" target="_blank" class="icon-link">
-              About Ryan Kim
-              <svg class="bi" width="1em" height="1em"><use xlink:href="#chevron-right"></use></svg>
-            </a>
-          </div>
+  <div class="headerColor">
+    <header class="d-flex justify-content-center py-3">
+      <ul class="nav nav-pills">
+        <li class="nav-item"><a href="./home.html" class="nav-link">Home</a></li>
+        <li class="nav-item"><a href="./index.html" class="nav-link">Calculator</a></li>
+        <li class="nav-item"><a href="./about.html" class="nav-link active" aria-current="page">About</a></li>
+        <li class="nav-item"><a href="./survey.html" class="nav-link">Survey</a></li>
+      </ul>
+    </header>
+  </div>
+  <div class="container px-4 py-5" id="featured-3">
+    <h2 class="pb-2 border-bottom">Resources</h2>
+    <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+      <div class="feature col">
+        <div class="feature-icon bg-primary bg-gradient">
+          <svg class="bi" width="1em" height="1em">
+            <use xlink:href="#collection"></use>
+          </svg>
         </div>
+        <h2>Contact the developer</h2>
+        <p>Below you will find the link to contact the developer of this website. You can also contact by messaging:
+          949-350-8825.</p>
+        <a href="https://www.instagram.com/_ryan_kim._/" target="_blank" class="icon-link">
+          Go to Instagram
+          <svg class="bi" width="1em" height="1em">
+            <use xlink:href="#chevron-right"></use>
+          </svg>
+        </a>
       </div>
+      <div class="feature col">
+        <div class="feature-icon bg-primary bg-gradient">
+          <svg class="bi" width="1em" height="1em">
+            <use xlink:href="#people-circle"></use>
+          </svg>
+        </div>
+        <h2>Github</h2>
+        <p>Below you will find the link to the github page for the code used to make this Website:</p>
+        <a href="https://github.com/CPSiphon/CollegeCalculator.github.io" target="_blank" class="icon-link">
+          Go to Github
+          <svg class="bi" width="1em" height="1em">
+            <use xlink:href="#chevron-right"></use>
+          </svg>
+        </a>
+      </div>
+      <div class="feature col">
+        <div class="feature-icon bg-primary bg-gradient">
+          <svg class="bi" width="1em" height="1em">
+            <use xlink:href="#toggles2"></use>
+          </svg>
+        </div>
+        <h2>About the developer</h2>
+        <p>Ryan Kim is currently a sophmore at Aliso Niguel High School. He uses his free time to code, hangout with
+          friends, and game while maintaing a high GPA in advanced classes. Learn more below:</p>
+        <a href="#" target="_blank" class="icon-link">
+          Work in progress
+          <svg class="bi" width="1em" height="1em">
+            <use xlink:href="#chevron-right"></use>
+          </svg>
+        </a>
+      </div>
+    </div>
+  </div>
 </body>
+
 </html>
