--- a/survey.html
+++ b/survey.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="shortcut icon" type="image/png" href="img/favicon.png.png">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <script src="survey.js" defer></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>Surveypage</title>
 </head>
 <body>
-    <div class="container">
+    <div class="headerColor">
         <header class="d-flex justify-content-center py-3">
           <ul class="nav nav-pills">
             <li class="nav-item"><a href="./home.html" class="nav-link">Home</a></li>
@@ -20,43 +23,42 @@
         </header>
       </div>
       <h1> College Admission Calculator survey</h1>
-        <h5>Quality of the Website (1 being very bad and 5 being very good)</h5>
+        <h5>Quality of the Website (1 being the worst and 5 being the best)</h5>
 
-        <form action="/action_page.php">
-            <p style="margin-left:1%; margin-right:1%;"><input type="checkbox" id="rate1" name="rate1" value="1">
-            <label for="rate1"> 1 </label><br>
-            <input type="checkbox" id="rate2" name="rate2" value="2">
-            <label for="rate2"> 2 </label><br>
-            <input type="checkbox" id="rate3" name="rate3" value="3">
-            <label for="rate3"> 3 </label><br>
-            <input type="checkbox" id="rate4" name="rate4" value="4">
-            <label for="rate4"> 4 </label><br>
-            <input type="checkbox" id="rate5" name="rate5" value="5">
-            <label for="rate5"> 5 </label><br>
+        <form id="survey" onsubmit="return false">
+            <p style="margin-left:1%; margin-right:1%;"><input type="checkbox" id="quality1" name="quality1" value="1">
+            <label for="quality1"> 1 </label><br>
+            <input type="checkbox" id="quality2" name="quality2" value="2">
+            <label for="quality2"> 2 </label><br>
+            <input type="checkbox" id="quality3" name="quality3" value="3">
+            <label for="quality3"> 3 </label><br>
+            <input type="checkbox" id="quality4" name="quality4" value="4">
+            <label for="quality4"> 4 </label><br>
+            <input type="checkbox" id="quality5" name="quality5" value="5">
+            <label for="quality5"> 5 </label><br>
 
-        <h5>Overall experience of the Website (1 being very bad and 5 being very good)</h5>
+        <h5>Overall experience of the Website (1 being the worst and 5 being the best)</h5>
 
-            <p style="margin-left:1%; margin-right:1%;"><input type="checkbox" id="rate1" name="rate1" value="1">
-            <label for="rate1"> 1 </label><br>
-            <input type="checkbox" id="rate2" name="rate2" value="2">
-            <label for="rate2"> 2 </label><br>
-            <input type="checkbox" id="rate3" name="rate3" value="3">
-            <label for="rate3"> 3 </label><br>
-            <input type="checkbox" id="rate4" name="rate4" value="4">
-            <label for="rate4"> 4 </label><br>
-            <input type="checkbox" id="rate5" name="rate5" value="5">
-            <label for="rate5"> 5 </label><br>
+            <p style="margin-left:1%; margin-right:1%;"><input type="checkbox" id="experience1" name="experience1" value="1">
+            <label for="experience1"> 1 </label><br>
+            <input type="checkbox" id="experience2" name="experience2" value="2">
+            <label for="experience2"> 2 </label><br>
+            <input type="checkbox" id="experience3" name="experience3" value="3">
+            <label for="experience3"> 3 </label><br>
+            <input type="checkbox" id="experience4" name="experience4" value="4">
+            <label for="experience4"> 4 </label><br>
+            <input type="checkbox" id="experience5" name="experience5" value="5">
+            <label for="experience5"> 5 </label><br>
 
         <h5>Recommended Colleges to add to the system</h5>
 
-        <form action="/action_page.php">
+          <p style="margin-left:0.5%; margin-right:0.5%;">
           <label for="fname">College Name</label><br>
           <input type="text" id="fname" name="fname"><br>
           <label for="lname">College State</label><br>
           <input type="text" id="lname" name="lname"><br><br>
-        </form>
 
-      <input type="submit" value="Submit">
+      <input type="submit" value="Submit" onclick="sendEmail()">
         </form>
 </body>
 </html>
